8361608: C2: assert(opaq->outcnt() == 1 && opaq->in(1) == limit) failed

Co-authored-by: Christian Hagedorn <chagedorn@openjdk.org>
Reviewed-by: chagedorn, rcastanedalo